--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -49,7 +49,7 @@
     <!-- input id="toggle-all" class="toggle-all" type="checkbox" / -->
     <ul role="list" class="divide-y divide-gray-100" id="todo-list-items">
 
-        <li class="flex flex-row py-5">
+        <li class="flex flex-row">
           <div class="w-8 flex-0">
           </div>
           <!-- div>
@@ -78,7 +78,7 @@
           <div class="flex-0 w-28"></div>
         </li>
       <%= for item <- @items do %>
-        <li data-id={item.id} class="flex flex-row py-5" class={completed?(item)}>
+        <li data-id={item.id} class="flex flex-row" class={completed?(item)}>
           <div class="w-8 flex-0">
             <%= if checked?(item) do %>
               <input class="toggle" type="checkbox" phx-value-id={item.id} phx-click="toggle" checked />
@@ -211,6 +211,43 @@
             patch={Routes.live_path(@socket, Auth2024Web.PageLive, %{filter_by: "completed"})}
           >
             Completed
+          </.link>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <ul class="flex flex-wrap text-sm font-medium text-center text-gray-500 border-t border-gray-200 dark:border-gray-700 dark:text-gray-400">
+        <li class="me-2">
+          <.link 
+            class={
+              ["inline-block", "p-4", "rounded-t-lg", "hover:text-gray-600", "hover:bg-gray-50", "dark:hover:bg-gray-800", "dark:hover:text-gray-300"]
+               ++ (if @tab=="all", do: ["text-blue-600", "bg-gray-100"], else: [])
+            }
+            patch={Routes.live_path(@socket, Auth2024Web.PageLive, %{filter_by: "all"})}
+          >
+            by date
+          </.link>
+        </li>
+        <li class="me-2">
+          <.link 
+            class={
+              ["inline-block", "p-4", "rounded-t-lg", "hover:text-gray-600", "hover:bg-gray-50", "dark:hover:bg-gray-800", "dark:hover:text-gray-300"]
+               ++ (if @tab=="active", do: ["text-blue-600", "bg-gray-100"], else: [])
+            }
+            patch={Routes.live_path(@socket, Auth2024Web.PageLive, %{filter_by: "active"})}
+          >
+            by contact
+          </.link>
+          </li>
+        <li class="me-2">
+          <.link 
+            class={
+              ["inline-block", "p-4", "rounded-t-lg", "hover:text-gray-600", "hover:bg-gray-50", "dark:hover:bg-gray-800", "dark:hover:text-gray-300"]
+               ++ (if @tab=="completed", do: ["text-blue-600", "bg-gray-100"], else: [])
+            }
+            patch={Routes.live_path(@socket, Auth2024Web.PageLive, %{filter_by: "completed"})}
+          >
+            Threaded
           </.link>
         </li>
       </ul>
