--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -121,28 +121,37 @@
                 phx-click="load-todo-item-contacts"
                 class="mt-1 truncate text-xs leading-5 text-gray-500"
               >
-                <%= if item.id == @editing_item && @editing_kind == :contact do %>
-                  <select 
-                    id={"select-todo-item-contact-#{item.id}"}
-                    class="text-xs focus:bg-yellow-100 focus:ring-0 leading-5 border-none p-0"
-                    phx-mounted={JS.focus()}
-                  >
-                    <%= for contact <- @editing_item_datalist do %>
-                      <option 
-                        selected={contact.id == item.contact_id}
-                        value={contact.family_name} 
-                        id={"select-todo-item-contact-#{item.id}-#{contact.id}"}
-                      >
-                        <%= contact.family_name %>                      
-                      </option>
-                    <% end %>
-                    <option 
-                      id={"select-todo-iten-new-contact-#{item.id}"}
-                      phx-click={show_modal("confirm-new-person")}
+                <%= if true or item.id == @editing_item && @editing_kind == :contact do %>
+                  <form>
+                    <input type="hidden" name="id" value={item.id}/>
+                    <select 
+                      id={"select-todo-item-contact-#{item.id}"}
+                      class="text-xs focus:bg-yellow-100 focus:ring-0 leading-5 border-none p-0"
+                      phx-value-id={item.id}
+                      phx-click="click-item-contact-select"
+                      phx-change="change-item-contact-select"
+                      phx-mounted={JS.focus()}
                     >
-                      Create new...
-                    </option>
-                  </select>
+                      <%= if item.id != @editing_item or @editing_kind != :contact do %>
+                        <option selected><%= item.contact.family_name %></option>
+                      <% else %>
+                        <%= for contact <- @editing_item_datalist do %>
+                          <option 
+                            selected={contact.id == item.contact_id}
+                            value={contact.family_name} 
+                            id={"select-todo-item-contact-#{item.id}-#{contact.id}"}
+                          >
+                            <%= contact.family_name %>                      
+                          </option>
+                        <% end %>
+                        <option 
+                          id={"select-todo-iten-new-contact-#{item.id}"}
+                        >
+                          Create new...
+                        </option>
+                      <% end %>
+                    </select>
+                  </form>
                 <% else %>
                   <label class="border-1" phx-click="edit-item-contact-select" phx-value-id={item.id}>
                     <%= item.contact.family_name %>
