--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -80,25 +80,29 @@
         </li>
       <%= for item <- @items do %>
         <li data-id={item.id} class="flex flex-row" class={completed?(item)}>
-          <div class="w-8 flex-0">
-            <%= if checked?(item) do %>
-              <input class="toggle" type="checkbox" phx-value-item_id={item.id} phx-click="toggle" checked />
-            <% else %>
-              <input class="toggle" type="checkbox" phx-value-item_id={item.id} phx-click="toggle" />
-            <% end %>
+          <div class="w-8 flex-0 flex flex-col">
+            <div class="flex-1">
+              <%= if checked?(item) do %>
+                <input class="toggle" type="checkbox" phx-value-item_id={item.id} phx-click="toggle" checked />
+              <% else %>
+                <input class="flex-0 toggle" type="checkbox" phx-value-item_id={item.id} phx-click="toggle" />
+              <% end %>
+            </div>
+            <div class="flex-1">
+              <button class="">&lt;&lt;</button>
+            </div>
           </div>
-          <div class="flex-1 min-w-0 leading-6 text-gray-900">
-            <div>
+          <div class="flex-1 min-w-0 leading-6 text-gray-900 flex flex-col items-stretch">
               <%= if item.id == @editing_item && @editing_kind == :caption do %>
                 <form
                   phx-submit="submit-todo-item-caption" 
                   id="form-todo-item-caption">
-                  <div class="flex">
+                  <div class="flex-1 flex">
                     <input
                       phx-mounted={JS.focus()}
                       phx-change="validate-todo-item-caption"
                       phx-blur={JS.dispatch("submit", to: "#form-todo-item-caption")}
-                      class="flex-1 focus:bg-yellow-100 focus:ring-0 font-semibold text-sm border-none p-0"
+                      class="flex-1 m-0 b-0 focus:bg-yellow-100 focus:ring-0 font-semibold text-sm border-none p-0"
                       type="text"
                       name="text"
                       required="required"
@@ -109,21 +113,22 @@
                 </form>
               <% else %>
                 <label 
-                  class="font-semibold text-sm margin-1 text-nowrap" 
-                  phx-click="edit-item-caption" phx-value-id={item.id}
+                  class="flex-1 font-semibold text-sm margin-1 text-nowrap" 
+                  phx-click="edit-item-caption" phx-value-item_id={item.id}
                 >
                   <%= item.caption %>
                 </label>
               <% end %>
               <form
                 phx-submit="submit-todo-item-contact"
+                class="flex-1 flex"
                 id={"form-todo-item-contact-#{item.id}"}
               >
                 <input type="hidden" name="item_id" value={item.id}/>
                 <select 
                   id={"select-todo-item-contact-#{item.id}"}
                   name="contact_person_name"
-                  class="mt-1 truncate text-gray-500 text-xs focus:bg-yellow-100 focus:ring-0 leading-5 border-none p-0"
+                  class="flex-1 m-0 truncate text-gray-500 text-xs focus:bg-yellow-100 focus:ring-0 leading-5 border-none p-0"
                   phx-value-id={item.id}
                   phx-change={JS.dispatch("submit", to: "#form-todo-item-contact-#{item.id}")}
                 >
@@ -142,24 +147,28 @@
                     Create new...
                   </option>
                 </select>
+              </form>            
+          </div>
+          <div class="flex-0 flex flex-col items-end">
+            <div class="flex-1">
+              <form 
+                phx-submit="submit-todo-item-due" 
+                id={form_todo_item_due_id(item)}>
+                <input 
+                  type="date" 
+                  name="duedate"
+                  class="w-24 text-xs border-none text-gray-900 sm:text-sm p-0" 
+                  phx-change="validate-todo-item-due"
+                  phx-blur={JS.dispatch("submit", to: "#" <> form_todo_item_due_id(item))}
+                  phx-select={JS.dispatch("submit", to: "#" <> form_todo_item_due_id(item))}
+                  value={display_due_date(item)}
+                />
+                <input type="hidden" name="item_id" value={item.id}/>
               </form>
             </div>
-          </div>
-          <div class="flex-0">
-            <form 
-              phx-submit="submit-todo-item-due" 
-              id={form_todo_item_due_id(item)}>
-              <input 
-                type="date" 
-                name="duedate"
-                class="w-28 text-xs border-none text-gray-900 sm:text-sm" 
-                phx-change="validate-todo-item-due"
-                phx-blur={JS.dispatch("submit", to: "#" <> form_todo_item_due_id(item))}
-                phx-select={JS.dispatch("submit", to: "#" <> form_todo_item_due_id(item))}
-                value={display_due_date(item)}
-              />
-              <input type="hidden" name="item_id" value={item.id}/>
-            </form>
+            <div class="flex-1">
+              <button class="">&gt;&gt;</button>
+            </div>
           </div>
         </li>
       <% end %>
