--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -3,6 +3,7 @@
   id="confirm-new-person"
   module={Auth2024Web.ConfirmNewPersonLive}
   onperson="confirm_new_person_onperson"
+  user={@current_user}
 />
 
 <section>
