--- a/lib/auth2024_web/components/layouts/app.html.heex
+++ b/lib/auth2024_web/components/layouts/app.html.heex
@@ -1,8 +1,7 @@
-<header class="px-4 sm:px-6 lg:px-8">
-
+<header class="flex-0 px-4 sm:px-6 lg:px-8">
 </header>
-<main class="">
-  <div class="mx-auto md:max-w-xl">
+<main class="flex-1 flex">
+  <div class="mx-auto md:max-w-xl flex-1 flex flex-col">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
   </div>
