--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -6,12 +6,10 @@
   user={@current_user}
 />
 
-<section>
-  <header>
-  </header>
-  <section style="display: block;">
+<section class="flex-1 flex flex-col">
+  <section class="flex-1 flex flex-col">
     <!-- input id="toggle-all" class="toggle-all" type="checkbox" / -->
-    <ul role="list" class="divide-y divide-gray-100" id="todo-list-items">
+    <ul role="list" class="divide-y divide-gray-100 flex-0" id="todo-list-items">
 
         <li class="flex flex-row">
           <div class="w-8 flex-0">
@@ -98,8 +96,10 @@
         </li>
       <% end %>
     </ul>
+    <!-- This one to stretch to full screen height -->
+    <div class="flex-1"/>
   </section>
-  <footer class="footer" style="display: block;">
+  <footer class="flex-0">
     <div>
       <ul class="flex flex-wrap text-sm font-medium text-center text-gray-500 border-t border-gray-200 dark:border-gray-700 dark:text-gray-400">
         <li class="me-1">
